<resources>
    <string name="app_name">VHMed</string>
    <string name="app_slogan">Tìm bác sĩ chính xác, đặt lịch khám dễ dàng</string>
    <string name="welcome">Chào mừng bạn trở lại</string>
    <string name="login_content">Hãy đăng nhập để tiếp tục</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Đăng nhập</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="email_confirm">Enter email here</string>
    <string name="send">Send</string>
    <string name="forgot_password_content">Email you want change password to here</string>
    <!-- Register -->
    <string name="register_welcome">Hãy tham gia cùng chúng tôi</string>
    <string name="register_content">Đăng ký ở dưới đây!</string>
    <string name="cf_password">Confirm Password</string>
    <string name="have_account">Already have an account? Log In</string>
    <string name="register">Đăng ký</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
</resources>